# edge-llm-lab

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  CONTRIBUTING.md  Makefile  README.md  TESTING.md  pyproject.toml  todo.txt
.github/workflows/: ci.yml
.neptune/async/run__a0b45828-9f82-4269-885e-e02057e3c5f7__38575__wdtoud8c/: metadata.json
.neptune/async/run__a0b46cb4-e801-42d8-88b1-532738e7fbc7__43904__mpnd306a/: metadata.json
.neptune/async/run__a0b46d1b-9b92-4b0e-ac78-24caa6e2d35a__43904__k6kyuw2e/: metadata.json
.neptune/async/run__a0b46d35-a1f6-46ac-9790-07aaca241722__43904__brmocwm4/: metadata.json
.neptune/async/run__a0b46d9f-9a54-489f-b0a8-47577f6329a5__43904__9lbo0ix7/: metadata.json
.neptune/async/run__a0b46df9-333c-4e89-b045-71bfe71564cc__43904__ikatu14b/: metadata.json
.neptune/async/run__a0b46e0b-4149-4f19-8446-e5c7f8a86ffe__43904__3qb4zrj2/: metadata.json
.neptune/async/run__a0b46e20-4000-4388-b97b-02726a7693bd__43904__5tpxthrb/: metadata.json
.neptune/async/run__a0b46eba-a60a-4ac0-b3fd-4fa86777b52d__43904__6jdj40s2/: metadata.json
.neptune/async/run__a0b46ecc-40fc-4f39-a3ee-447b50420b5a__43904__dqmue9nf/: metadata.json
.neptune/async/run__a0b46ede-04de-46d3-a7a1-a7366ae53e99__43904__dfpsf82t/: metadata.json
.neptune/async/run__a0b46fcf-252d-40bd-86f0-15e63f5d122e__43904__tpv5x3bd/: metadata.json
.neptune/async/run__a0b474a1-76f0-4804-a868-c0ed43bed740__46223__6ekoxsha/: metadata.json
.neptune/async/run__a0b47606-8502-447d-a135-ce878efe820d__46998__nb8egx9v/: metadata.json
.neptune/async/run__a0b47b32-5b1b-4948-8167-f9285b64cb8b__48798__npifflo7/: metadata.json
.neptune/async/run__a0b4817d-7a3b-41b3-9613-254b4f881100__49880__6tc10aly/: metadata.json
.neptune/async/run__a0b48261-2566-4a00-956c-abca63cbe0f9__50429__hh1exi15/: metadata.json
.neptune/async/run__a0b48736-761f-4a84-b8fe-c6d78a948708__51371__k0vdzprd/: metadata.json
.neptune/async/run__a0b48cca-036f-45a1-8a38-67194b220021__52887__ty3f5ty6/: metadata.json
.neptune/async/run__a0b48e40-8f01-4153-af25-64dcc986442a__53580__2430mn0l/: metadata.json
.neptune/async/run__a0b4b393-0769-4e64-80ba-806851177adf__64494__4sif9zae/: metadata.json
.neptune/async/run__a0b4b735-c62b-4986-9d17-e50465375768__67407__fj7647yn/: metadata.json
.neptune/async/run__a0b4b8ec-a186-4474-ba9d-628cbb6e3158__68297__vaz7qnqs/: metadata.json
.neptune/async/run__a0b59717-d137-4a35-a053-ae837d96dc72__85722__zdp5cgfj/: metadata.json
.neptune/async/run__a0b5ad9f-6b7c-4379-9191-8475b53abd5c__92294__aqewh4mp/: metadata.json
.neptune/async/run__a0b5b052-5ced-4a14-8999-47d96e431ec7__93337__jr2jfi1t/: metadata.json
.neptune/async/run__a0dc8376-8b45-4b6f-831f-561584e0086b__37744__79i03kss/: metadata.json
.neptune/async/run__a0dc88ca-1066-403d-a1e8-ce2cad6664db__39141__s6m2t7jv/: metadata.json
.neptune/async/run__a0dc8afc-3b38-44e9-bfd3-e74956e41e71__41451__f6ty5j2g/: metadata.json
.neptune/async/run__a0dc8cc3-6faa-4ad2-bf83-17cf45e40855__43197__s3nd4y9z/: metadata.json
.neptune/async/run__a0dc8d2e-2ed9-4908-b3ec-bd4dae2862b1__43590__jb7azvs4/: metadata.json
.neptune/async/run__a0dcba43-3b56-493f-9b89-a0eb955adb36__53336__wl0e0mtv/: metadata.json
.neptune/async/run__a0e20582-a3b8-48eb-a44c-50001239e4b5__13065__ix5f004m/: metadata.json
.neptune/async/run__a0ea0679-09ee-48b4-9e97-c16678ae3302__30108__g0yyslmd/: metadata.json
examples/desktop/: basic_evaluation.py  convert_to_tinydb.py  evaluation_protocol_pl.tex  optimization_demo.py  run_evaluation_pipeline.py  statistical_analysis.py
examples/desktop/config/: custom_optimizations.yaml  evaluation_config.yaml  inference_params.yaml
examples/desktop/prompts/: complete_status.txt  constant_data.txt  constant_data_en 2.txt  constant_data_en.txt  data_collection.txt  display_prompt.txt  symptoms 2.txt  validation.txt
examples/desktop/pydantic_models/: pydantic_model_esport_to_assets.py  pydantic_models.py  pydantic_models_en.py
examples/desktop/schemas-outdated/: constantdata_en_schema.json  constantdata_schema.json  constantdataanalysiscot_en_schema.json  constantdataanalysiscot_schema.json  data_collection.json  fluctuatingdata_en_schema.json  fluctuatingdata_schema.json  fluctuatingdataanalysiscot_en_schema.json  fluctuatingdataanalysiscot_schema.json  model_index.json  periodicdata_en_schema.json  periodicdata_schema.json  periodicdataanalysiscot_schema.json  (+5 more)
examples/fed_mobile_integration/: README.md  fed_mobile_evaluation_example.py  medical_config.yaml
output/: master_metrics_table.tex  multi_model_metrics_2025-12-29_17-40-32.tex
praktyka/: eval.tex  opis.tex  optim.tex  przewodnik_wizualny.md
src/edge_llm_lab/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py  test_config_loading.py
tests/unit/: __init__.py  test_agent_config.py  test_optimization.py
(+68 files in other folders)
